--- a/ima/pyproject.toml
+++ b/ima/pyproject.toml
@@ -1,7 +1,33 @@
 [project]
 name = "ima"
 version = "0.1.0"
-description = "Add your description here"
+description = "IMA permission-based auth service (FastAPI)"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.116.1",
+    "pytest>=8.4.2",
+    "uvicorn>=0.35.0",
+]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "isort>=6.0.1",
+    "mypy>=1.17.1",
+    "pre-commit-hooks>=6.0.0",
+    "ruff>=0.12.12",
+]
+
+
+[tool.black]
+line-length = 88
+
+[tool.ruff]
+line-length = 88
+fix = true
+exclude = ["alembic"]
+
+[tool.mypy]
+python_version = "3.11"
+ignore_missing_imports = true
