--- a/ima/pyproject.toml
+++ b/ima/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.116.1",
+    "pydantic-settings>=2.10.1",
     "pytest>=8.4.2",
     "uvicorn>=0.35.0",
 ]
