--- a/ima/pyproject.toml
+++ b/ima/pyproject.toml
@@ -11,11 +11,22 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "greenlet>=3.2.4",
     "httpx>=0.28.1",
+    "locust>=2.40.2",
+    "opentelemetry-exporter-otlp>=1.36.0",
+    "opentelemetry-instrumentation-asyncpg>=0.57b0",
+    "opentelemetry-instrumentation-fastapi>=0.57b0",
+    "opentelemetry-instrumentation-logging>=0.57b0",
+    "opentelemetry-instrumentation-requests>=0.57b0",
+    "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
+    "opentelemetry-sdk>=1.36.0",
+    "prometheus-client>=0.22.1",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.10.1",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.1.0",
     "redis[async]>=6.4.0",
+    "requests>=2.32.5",
+    "sentry-sdk>=2.37.0",
     "sqlalchemy>=2.0.43",
     "sqlmodel>=0.0.24",
     "uvicorn>=0.35.0",
